ADM-410 Convert BuildKitePipelineDTO to PipelineDTO